Gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-postgres
  namespace: gitea
  labels:
    app: gitea-postgres
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: gitea-postgres
