Gitea/gitea-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-ingress
  namespace: gitea
  annotations:
    kubernetes.io/ingress.class: traefik
#    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
#    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: gitea.cube.local
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: gitea
              port:
                number: 3000
